# ARC

./: README  requirements.txt
BLE/: CMakeLists.txt  README.md  prj.conf
BLE/boards/: esp32_devkitc_wroom_procpu.overlay  esp32s2_devkitc.overlay  esp_wrover_kit.overlay  nrf52840dk_nrf52840.overlay
BLE/src/: main.c
MQTT/: CMakeLists.txt  README.md  prj.conf
MQTT/boards/: esp32_devkitc_wroom_procpu.overlay  esp32_devkitc_wrover_procpu.overlay  esp32s2_devkitc.overlay  esp_wrover_kit.overlay
MQTT/src/: main.c
MQTT/tests/: CMakeLists.txt  main.c  prj.conf
